use a subsetted reference genome

--- a/tutorial/tutorial.Rmd
+++ b/tutorial/tutorial.Rmd
@@ -38,8 +38,8 @@ Then, define the following variables on your Linux server. Make sure that you **
 ```{bash eval=FALSE}
 ## Location of the tutorial folder in the batch-effect Github repo
 BASEDIR=/workdir/batch-effect/tutorial
-## Path to the reference to the gadMor3 reference genome
-REFERENCE=/workdir/cod/reference_seqs/gadMor3.fasta
+## Path to samtools (https://github.com/samtools/)
+SAMTOOLS=samtools
 ## Path to fastp (https://github.com/OpenGene/fastp)
 FASTP=/workdir/programs/fastp_0.19.7/fastp
 ## Path to fastqc (https://www.bioinformatics.babraham.ac.uk/projects/fastqc/)
@@ -48,6 +48,14 @@ FASTQC=fastqc
 ANGSD=/programs/angsd0.930/angsd/angsd 
 ## Path to the realSFS module in AGNSD
 REALSFS=/workdir/programs/angsd0.931/angsd/misc/realSFS
+## Path to a subsetted gadMor3 reference genome
+REFERENCE=$BASEDIR/data/gadMor3_subsetted.fasta
+```
+
+Index the subsetted reference genome.
+
+```{bash eval=FALSE}
+$SAMTOOLS faidx $REFERENCE
 ```
 
 You will need to create a `results` folder within `tutorial` to store your output files. To do so, run 
@@ -243,7 +251,7 @@ het_final %>%
   )
 ```
 
-Note that since we took a very small subsample of the data, the statiscal signficance is not exactly the same as what our paper shows. Here, the NextSeq-150PE samples get signficantly lower heterozygosity estimates after the filter is applied, but the HiSeq-125PE samples are not significantly affected by the filter although there is a trend of increased heterozygosity estimates after the filter is applied.
+As shown in our paper, the NextSeq-150PE samples get signficantly lower heterozygosity estimates after the filter is applied, and the HiSeq-125PE samples get significantly higher heterozygosity estimates with the filter.
 
 This suggests that base qualities are likely to be overestimated in the NextSeq-150PE batch, and underestimated in the HiSeq-125PE batch. This could cause an inflation of hetorozygosity in the NextSeq-150PE batch (i.e. sequencing errors are interpreted as true mutations). Therefore, using a more stringent base quality threshold for both batches can be an effective mitigation strategy. 
 
@@ -410,10 +418,10 @@ fst_depth_ratio %>%
   scale_fill_viridis_d() +
   labs(x="proportion of reads with mapping quality lower than 20",
        y="density",
-       subtitle=expression(paste(italic("t")["Welch"], "(", "49.09", ") = ", "-7.51", ", ", 
-    italic("p"), " = ", "1.07e-09", ", ", widehat(italic("g"))["Hedges"], 
-    " = ", "-1.30", ", CI"["95%"], " [", "-1.72", ", ", "-0.87", 
-    "], ", italic("n")["obs"], " = ", "15,681"))) +
+       subtitle=expression(paste(italic("t")["Welch"], "(", "18.08", ") = ", "-11.17", ", ", 
+    italic("p"), " = ", "1.51e-09", ", ", widehat(italic("g"))["Hedges"], 
+    " = ", "-2.75", ", CI"["95%"], " [", "-3.76", ", ", "-1.73", 
+    "], ", italic("n")["obs"], " = ", "5,202"))) +
   theme_ggstatsplot() +
   theme(panel.grid = element_blank(),
         axis.line = element_line())
@@ -442,20 +450,30 @@ On this segment of the genome, our mitigation strategy is particularly successfu
 
 ```{r eval=TRUE}
 basedir="/workdir/batch-effect/tutorial/"
-sample_table <- read_tsv(str_c(basedir, "data/sample_table_rb.tsv"))
+rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "BUK2011", "IKE2011", "PAA2011", "ATP2011", "NAR2008", "UUM2010"),
+                     population_new =c("pop 1", "pop 2", "pop 3", "pop 4", "pop 5", "pop 6", "pop 7", "pop 8", "pop 9"))
+sample_table <- read_tsv(str_c(basedir, "data/sample_table_rb.tsv")) %>%
+  dplyr::select(-population_new) %>%
+  left_join(rename_pop) %>%
+  mutate(batch=ifelse(data_type=="se", "HiSeq-125SE", "NextSeq-150PE"))
 bam_list <- read_tsv(str_c(basedir, "data/bam_list_rb.txt"), col_names = FALSE) %>%
   transmute(sample_id=str_sub(X1, 37, 47))
 genome_cov <- read_tsv(str_c(basedir, "results/bam_list_rb.covMat"), col_names = F)[1:nrow(sample_table),1:nrow(sample_table)] %>% as.matrix
 pca_table <- eigen(genome_cov)$vectors %>% 
   as_tibble() %>%
-  #transmute(PC1=V1, PC2=V2) %>%
+  transmute(PC1=V1, PC2=V2) %>%
   bind_cols(bam_list, .) %>%
   left_join(sample_table, ., by=c("sample_id_corrected"="sample_id"))
 pca_table %>%
-  ggplot(aes(x=V1, y=V2, color=data_type)) +
-  facet_wrap(~population) +
+  left_join(rename_pop) %>%
+  ggplot(aes(x=PC1, y=PC2, color=batch)) +
+  facet_wrap(~population_new) +
   geom_point() +
-  theme_cowplot()
+  scale_color_viridis_d(begin=0.25, end=0.75) +
+  theme_cowplot() +
+  theme(axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        panel.border = element_rect(colour="black",size=0.5))
 ```
 
 Because this subset of our dataset is very small, individual level PCA has limited power, and therefore there is not a signal of batch effects in our PCA results. However, we still provide the code to mitigate batch effects when they are observed in the PCA results.
@@ -486,20 +504,30 @@ $ANGSD -b $BASEDIR/data/bam_list_rb.txt \
 
 ```{r eval=TRUE}
 basedir="/workdir/batch-effect/tutorial/"
-sample_table <- read_tsv(str_c(basedir, "data/sample_table_rb.tsv"))
+rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "BUK2011", "IKE2011", "PAA2011", "ATP2011", "NAR2008", "UUM2010"),
+                     population_new =c("pop 1", "pop 2", "pop 3", "pop 4", "pop 5", "pop 6", "pop 7", "pop 8", "pop 9"))
+sample_table <- read_tsv(str_c(basedir, "data/sample_table_rb.tsv")) %>%
+  dplyr::select(-population_new) %>%
+  left_join(rename_pop) %>%
+  mutate(batch=ifelse(data_type=="se", "HiSeq-125SE", "NextSeq-150PE"))
 bam_list <- read_tsv(str_c(basedir, "data/bam_list_rb.txt"), col_names = FALSE) %>%
   transmute(sample_id=str_sub(X1, 37, 47))
 genome_cov_depth_ratio_filtered <- read_tsv(str_c(basedir, "results/bam_list_rb_depth_ratio_filtered.covMat"), col_names = F)[1:nrow(sample_table),1:nrow(sample_table)] %>% as.matrix
 pca_table_depth_ratio_filtered <- eigen(genome_cov_depth_ratio_filtered)$vectors %>% 
   as_tibble() %>%
-  #transmute(PC1=V1, PC2=V2) %>%
+  transmute(PC1=V1, PC2=V2) %>%
   bind_cols(bam_list, .) %>%
   left_join(sample_table, ., by=c("sample_id_corrected"="sample_id"))
 pca_table_depth_ratio_filtered %>%
-  ggplot(aes(x=V1, y=V2, color=data_type)) +
-  facet_wrap(~population) +
+  left_join(rename_pop) %>%
+  ggplot(aes(x=PC1, y=PC2, color=batch)) +
+  facet_wrap(~population_new) +
   geom_point() +
-  theme_cowplot()
+  scale_color_viridis_d(begin=0.25, end=0.75) +
+  theme_cowplot() +
+  theme(axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        panel.border = element_rect(colour="black",size=0.5))
 ```
 
 ## DNA degradation
@@ -561,9 +589,9 @@ sample_table <- read_tsv(str_c(basedir, "data/sample_table_degradation.tsv"))
 for (i in seq_len(nrow(sample_table))){
   data_type <- sample_table$data_type[i]
   if (data_type=="se"){
-    prefix <- str_c(sample_table$sample_seq_id[i], "_bt2_gadMor3_sorted_dedup_realigned_subsetted_mindp2_maxdp10_minq33_minmapq30_notrans")
+    prefix <- str_c(sample_table$sample_seq_id[i], "_bt2_gadMor3_sorted_dedup_realigned_subsetted_degradation_mindp2_maxdp10_minq33_minmapq30_notrans")
   } else {
-    prefix <- str_c(sample_table$sample_seq_id[i], "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_subsetted_mindp2_maxdp10_minq33_minmapq30_notrans")
+    prefix <- str_c(sample_table$sample_seq_id[i], "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_subsetted_degradation_mindp2_maxdp10_minq33_minmapq30_notrans")
   }
   for (notrans in c(0, 1)) {
     ml <- read_delim(str_c(basedir, "results/", prefix, notrans, ".ml"), col_names = FALSE, delim = " ")
@@ -585,10 +613,10 @@ het_final %>%
   ggstatsplot::ggbetweenstats(x = data_type, 
                               y = delta,  
                               type = "p", 
-                              p.adjust.method = "holm",
                               pairwise.comparisons = TRUE,
                               ggsignif.args = list(textsize = 3),
-                              ggplot.component = list(coord_cartesian(ylim=c(-0.005, 0.0001)),
+                              ggplot.component = list(coord_cartesian(ylim=c(-0.005, 0.0001)), 
+                                                      scale_color_manual(values = c("#5DC863FF", "#3B528BFF")), 
                                                       theme(panel.grid = element_blank(),
                                                             axis.line = element_line()))) +
   #geom_signif(comparisons = list(c("pe\nless degraded", "se\nmore degraded"), c("se\nless degraded", "se\nmore degraded")), y_position = c(-0.001, -0.0012)) +
