--- a/tutorial/data_prep.Rmd
+++ b/tutorial/data_prep.Rmd
@@ -7,6 +7,13 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Select two chromosomes from the gadMor3 reference genome
+
+```{bash eval=FALSE}
+samtools faidx /workdir/cod/reference_seqs/gadMor3.fasta LG06 > /workdir/batch-effect/tutorial/data/gadMor3_subsetted.fasta
+samtools faidx /workdir/batch-effect/tutorial/data/gadMor3_subsetted.fasta
+```
+
 ## Poly-G tail trimming
 
 ```{bash eval=FALSE}
@@ -44,7 +51,7 @@ egrep 'IKE' /workdir/batch-effect/sample_lists/sample_table_merged.tsv >>  /work
 for LINE in `egrep 'IKE' /workdir/batch-effect/sample_lists/bam_list_realigned.txt`; do
   TEMP=${LINE%.*}
   PREFIX=${TEMP/*\/}
-  samtools view -b $LINE "LG03" > /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_bq.bam
+  samtools view -b $LINE "LG06" > /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_bq.bam
 done
 ```
 
@@ -87,13 +94,13 @@ done
 for LINE in `egrep 'UUM' /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_se.txt`; do
   TEMP=${LINE%.*}
   PREFIX=${TEMP/*\/}
-  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted.bam >> /workdir/batch-effect/tutorial/data/bam_list_degradation_se.txt
+  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_degradation.bam >> /workdir/batch-effect/tutorial/data/bam_list_degradation_se.txt
 done
 
 for LINE in `egrep 'UUM' /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_pe.txt`; do
   TEMP=${LINE%.*}
   PREFIX=${TEMP/*\/}
-  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted.bam >> /workdir/batch-effect/tutorial/data/bam_list_degradation_pe.txt
+  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_degradation.bam >> /workdir/batch-effect/tutorial/data/bam_list_degradation_pe.txt
 done
 
 cp /workdir/batch-effect/tutorial/data/bam_list_degradation_se.txt /workdir/batch-effect/tutorial/data/bam_list_degradation.txt
@@ -107,6 +114,6 @@ egrep 'UUM' /workdir/batch-effect/sample_lists/sample_table_merged.tsv >>  /work
 for LINE in `egrep 'UUM' /workdir/batch-effect/sample_lists/bam_list_realigned.txt`; do
   TEMP=${LINE%.*}
   PREFIX=${TEMP/*\/}
-  samtools view -b $LINE "LG03:5000000-15000000" > /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted.bam
+  samtools view -b $LINE "LG06:5000000-15000000" > /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_degradation.bam
 done
 ```
