--- a/tutorial/data_prep.Rmd
+++ b/tutorial/data_prep.Rmd
@@ -17,31 +17,47 @@ samtools faidx /workdir/batch-effect/tutorial/data/gadMor3_subsetted.fasta
 ## Poly-G tail trimming
 
 ```{bash eval=FALSE}
+## A pair of fastq files for trimming
 zcat /workdir/cod/greenland-cod/adapter_clipped/QQL2011_884_55191_7_adapter_clipped_f_paired.fastq.gz | head -n 500000 | gzip > /workdir/batch-effect/tutorial/data/before_trimming_f.fastq.gz
 zcat /workdir/cod/greenland-cod/adapter_clipped/QQL2011_884_55191_7_adapter_clipped_r_paired.fastq.gz | head -n 500000 | gzip > /workdir/batch-effect/tutorial/data/before_trimming_r.fastq.gz
+
+## IKE before and after sliding window trimming
+## Come up with a bam list
+rm /workdir/batch-effect/tutorial/data/bam_list_poly_g.txt
+
+for LINE in `egrep 'IKE' /workdir/batch-effect/sample_lists/bam_list_realigned.txt`; do
+  TEMP=${LINE%.*}
+  PREFIX=${TEMP/*\/}
+  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_poly_g_trimming.bam >> /workdir/batch-effect/tutorial/data/bam_list_poly_g.txt
+  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_sliding_window_trimming.bam >> /workdir/batch-effect/tutorial/data/bam_list_poly_g.txt
+done
+
+## Come up with a sample table
+head -n 1 /workdir/batch-effect/sample_lists/sample_table_merged.tsv >  /workdir/batch-effect/tutorial/data/sample_table_poly_g.tsv
+egrep 'IKE' /workdir/batch-effect/sample_lists/sample_table_merged.tsv >>  /workdir/batch-effect/tutorial/data/sample_table_poly_g.tsv
+
+## Subset bam files
+for LINE in `egrep 'IKE' /workdir/batch-effect/sample_lists/bam_list_realigned.txt`; do
+  TEMP=${LINE%.*}
+  PREFIX=${TEMP/*\/}
+  samtools view -b $LINE "LG06:5000000-15000000" > /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_sliding_window_trimming.bam
+  PREFIX1=${PREFIX%sorted*}
+  PREFIX2=${PREFIX/*gadMor3}
+  samtools view -b /workdir/cod/greenland-cod/bam/${PREFIX1}minq20${PREFIX2}.bam "LG06:5000000-15000000" > /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_poly_g_trimming.bam
+done
 ```
 
 ## Base quality miscalibration
 
 ```{bash eval=FALSE}
-## Come up with bam lists
-rm /workdir/batch-effect/tutorial/data/bam_list_bq_se.txt
-rm /workdir/batch-effect/tutorial/data/bam_list_bq_pe.txt
+## Come up with a bam list
+rm /workdir/batch-effect/tutorial/data/bam_list_bq.txt
 
-for LINE in `egrep 'IKE' /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_se.txt`; do
+for LINE in `egrep 'IKE' /workdir/batch-effect/sample_lists/bam_list_realigned.txt`; do
   TEMP=${LINE%.*}
   PREFIX=${TEMP/*\/}
-  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_bq.bam >> /workdir/batch-effect/tutorial/data/bam_list_bq_se.txt
+  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_bq.bam >> /workdir/batch-effect/tutorial/data/bam_list_bq.txt
 done
-
-for LINE in `egrep 'IKE' /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_pe.txt`; do
-  TEMP=${LINE%.*}
-  PREFIX=${TEMP/*\/}
-  echo /workdir/batch-effect/tutorial/data/${PREFIX}_subsetted_bq.bam >> /workdir/batch-effect/tutorial/data/bam_list_bq_pe.txt
-done
-
-cp /workdir/batch-effect/tutorial/data/bam_list_bq_se.txt /workdir/batch-effect/tutorial/data/bam_list_bq.txt
-cat /workdir/batch-effect/tutorial/data/bam_list_bq_pe.txt >> /workdir/batch-effect/tutorial/data/bam_list_bq.txt
 
 ## Come up with a sample table
 head -n 1 /workdir/batch-effect/sample_lists/sample_table_merged.tsv >  /workdir/batch-effect/tutorial/data/sample_table_bq.tsv
