saved main figures as high-resolution files

--- a/markdown/base_quality.Rmd
+++ b/markdown/base_quality.Rmd
@@ -241,5 +241,9 @@ figure <- het_final %>%
 print(figure)
 ```
 
+```{r eval=FALSE}
+ggsave("../figures/figure_3.pdf", figure, width = 12, height = 5, unit="in")
+```
+
 A more stringent filter decreases heterozygosity estimate of PE samples but increases that of the the SE samples (very slightly).
 
